# atb-tools

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: ATBFile.hpp  Bank.hpp  Format.hpp  Frame.hpp  FrameEntry.hpp  Layer.hpp  PatternEntry.hpp  Serializable.hpp  StreamHelper.hpp  TextureEntry.hpp
include/ATB/: ATBFile.hpp  Bank.hpp  Format.hpp  Frame.hpp  Layer.hpp  PatternEntry.hpp  TextureEntry.hpp
include/TPL/: Header.hpp  ImageDescription.hpp  ImageHeader.hpp  ImageTable.hpp  PaletteHeader.hpp  TPLFile.hpp
src/: ATBFile.cpp  Bank.cpp  Format.cpp  Frame.cpp  FrameEntry.cpp  Layer.cpp  PatternEntry.cpp  TextureEntry.cpp  main.cpp
src/ATB/: ATBFile.cpp  Bank.cpp  Format.cpp  Frame.cpp  Layer.cpp  PatternEntry.cpp  TextureEntry.cpp
src/TPL/: Header.cpp  ImageDescription.cpp  ImageHeader.cpp  ImageTable.cpp  PaletteHeader.cpp  TPLFile.cpp
